<update to index.html, main.css and gallery.html> added logo and text overlay to carousel changed to new footer on index.html changed media query from min to max for 768px fixed flickering navbar bug added link back to index.html from gallery.html

--- a/css/main.css
+++ b/css/main.css
@@ -35,9 +35,25 @@ footer {
     margin-top: 51px
 }
 
-/* tablets */
-@media (min-width: 768px) {
+nav{
+  -webkit-backface-visibility: hidden;
+}
 
+.AAlogo {
+   margin-bottom: 150px;
+    margin-right: -100px;
+
+}
+.carouselCaption {
+    margin-left: -100px;
+    text-align: left;
+}
+
+/* tablets */
+@media (max-width: 768px) {
+ .showcase {
+     padding-top: 50px;
+ }
 }
 
 /* desktops */
